--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nuxt": "^3.11.2",
     "swiper": "^11.1.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-timer-hook": "^1.0.84"
   },
   "devDependencies": {
     "nuxt-icon": "^0.6.10"
