--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.15.2",
+    "@samk-dev/nuxt-vcalendar": "^1.0.3",
+    "date-fns": "^2.30.0",
     "nuxt": "^3.11.2",
     "swiper": "^11.1.1",
     "vue": "^3.4.21",
@@ -18,6 +20,7 @@
     "vue-timer-hook": "^1.0.84"
   },
   "devDependencies": {
+    "@nuxtjs/date-fns": "^1.5.0",
     "nuxt-icon": "^0.6.10"
   }
 }
