--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "swiper": "^11.1.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vue-timer-hook": "^1.0.84"
+    "vue-timer-hook": "^1.0.84",
+    "vue3-grid-layout-next": "^1.0.7"
   },
   "devDependencies": {
     "@nuxtjs/date-fns": "^1.5.0",
