--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxt/ui": "^2.15.2",
     "@samk-dev/nuxt-vcalendar": "^1.0.3",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "date-fns": "^2.30.0",
     "nuxt": "^3.11.2",
     "swiper": "^11.1.8",
