--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.15.2",
+    "@pinia/nuxt": "^0.5.2",
     "@samk-dev/nuxt-vcalendar": "^1.0.3",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "date-fns": "^2.30.0",
     "nuxt": "^3.11.2",
+    "pinia": "^2.2.0",
     "swiper": "^11.1.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
