--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,12 @@
 # RewriteEngine On enables the runtime rewriting engine
-RewriteEngine On
+# RewriteEngine On
 
 # Check if the requested resource exists, if it does not, then forward the request to index.html
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
 
 # Rewriting all other requests to index.html
-RewriteRule ^ index.html [QSA,L]
+# RewriteRule ^ index.html [QSA,L]
 
 
 
